syntax = "proto3";

package tango.signaling;

message Packet {
  message Start {
    string session_id = 1;
    string offer_sdp = 2;
  }

  message Offer { string sdp = 1; }

  message Answer { string sdp = 1; }

  message ICECandidate {
    string candidate = 1;
    string mid = 2;
  }

  oneof which {
    Start start = 1;
    Offer offer = 2;
    Answer answer = 3;
    ICECandidate ice_candidate = 4;
  }
}
