syntax = "proto3";

message GameInfo {
  message Patch {
    string name = 1;
    string version = 2;
  }
  string rom = 1;
  Patch patch = 2;
}

message SetSettings {
  string nickname = 1;
  uint32 match_type = 2;
  uint32 match_subtype = 3;
  GameInfo game_info = 4;
  repeated GameInfo available_games = 5;
  uint32 input_delay = 6;
  bool reveal_setup = 7;
}

message Commit { bytes commitment = 1; }

message Uncommit {}

message Chunk { bytes chunk = 1; }

message Message {
  oneof which {
    SetSettings set_settings = 1;
    Commit commit = 2;
    Uncommit uncommit = 3;
    Chunk chunk = 4;
  }
}

message NegotiatedState {
  bytes nonce = 1;
  bytes save_data = 2;
}
